--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "java.project.sourcePaths": [
+        "Class/Design pattherns",
         "Class/Algorigthms/Graph",
         "Class/Algorigthms/Dp",
-        "Class/Design pattherns"
+        "Class/LLSD/Player"
     ]
 }
