--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "Class/Design pattherns",
         "Class/Algorigthms/Graph",
         "Class/Algorigthms/Dp",
-        "Class/Algorigthms"
+        "Class/Algorigthms",
+        "Class"
     ]
 }
