--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "Class/Algorigthms/Graph",
         "Class/Algorigthms/Dp",
         "Class/Algorigthms",
-        "Class"
+        "Class",
+        ""
     ]
 }
